Improved support for other OSes. Added testing DBs to GitHub.